--- a/ELIXIR.API/appsettings.json
+++ b/ELIXIR.API/appsettings.json
@@ -19,12 +19,18 @@
   //}
 
 
+  //"AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "DevConnection": "data source=10.10.2.31,1433\\SQLEXPRESS; Initial Catalog=ELIXIRDB; User ID=sa; Password=El!xirServ3r2o22;MultipleActiveResultSets=true; ",
+  //  "Testing": "data source=97.74.81.27,1433; Initial Catalog=ELIXIRDB_TESTING; User ID=elixirpharmacy; Password=Aldrin004!;MultipleActiveResultSets=true;",
+  //  "LiveConnection": "Data Source=10.10.2.6,1433;Initial Catalog=ELIXIR_TESTING;User ID=sa;Password=ULtR@MaVD3p0t2o22;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+  //  "Local": "Server=MIS-RESGUERRA-L\\SQLEXPRESS01; Database=ELIXIR_Local; Trusted_Connection=True; MultipleActiveResultSets=true;"
+  //}
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DevConnection": "data source=10.10.2.31,1433\\SQLEXPRESS; Initial Catalog=ELIXIRDB; User ID=sa; Password=El!xirServ3r2o22;MultipleActiveResultSets=true; ",
     "Testing": "data source=97.74.81.27,1433; Initial Catalog=ELIXIRDB_TESTING; User ID=elixirpharmacy; Password=Aldrin004!;MultipleActiveResultSets=true;",
-    "LiveConnection": "Data Source=10.10.2.6,1433;Initial Catalog=ELIXIR_TESTING;User ID=sa;Password=ULtR@MaVD3p0t2o22;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "Local": "Server=MIS-RESGUERRA-L\\SQLEXPRESS01; Database=ELIXIR_Local; Trusted_Connection=True; MultipleActiveResultSets=true;"
+    "LiveConnection": "Data Source=10.10.2.6,1433;Initial Catalog=ELIXIR_TESTING;User ID=sa;Password=ULtR@MaVD3p0t2o22;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 
 }
